--- a/css/style.css
+++ b/css/style.css
@@ -93,26 +93,20 @@ body {
       left: 32px; }
 
 .button {
-  border-radius: 50px;
   background-color: #6C6F8B;
+  border-radius: 50px;
   color: #fff;
-  padding: 4px 15px;
-  margin: 5px; }
+  margin: 5px;
+  padding: 4px 15px; }
+  .button-active {
+    background-color: #23274A; }
+  .button-disabled {
+    opacity: 0.5;
+    pointer-events: none; }
+  .button a {
+    color: #fff;
+    text-decoration: none; }
 
-.button a {
-  text-decoration: none;
-  color: #fff; }
-
+#checkAnswers,
 #prev {
-  display: none; }
-
-#start {
-  display: none;
-  width: 90px; }
-
-.btn-disabled {
-  pointer-events: none;
-  opacity: 0.5; }
-
-#checkAnswers {
   display: none; }
