--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,8 +3,9 @@
 $color-grey-light-1: #d3d3d3;
 $color-grey-dark-1: #707070;
 $color-white: #fff;
+$color-main-background:#f6f8ff;
 
-$color-primary:#23274A;
-$color-secondary:#6C6F8B;
-$color-tertiary:#383B59;
-
+$color-checkbox-active: #4cd964;
+$color-primary: #23274a;
+$color-secondary: #6c6f8b;
+$color-tertiary: #383b59;
