--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -1,39 +1,38 @@
 .switch {
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
-    width: 62px;
-    height: 32px;
-    display: inline-block;
-    position: relative;
-    border-radius: 50px;
-    overflow: hidden;
-    outline: none;
-    border: none;
-    cursor: pointer;
     background-color: $color-tertiary;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    height: 32px;
+    -moz-appearance: none;
+    outline: none;
+    overflow: hidden;
+    position: relative;
     transition: background-color ease 0.3s;
+    -webkit-appearance: none;
+    width: 62px;
 
     &:before {
+        background: $color-white;
+        border-radius: 50%;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.2);
         content: "";
         display: block;
-        position: absolute;
-        z-index: 2;
-        width: 28px;
         height: 28px;
-        background: #fff;
         left: 2px;
+        position: absolute;
         top: 2px;
-        border-radius: 50%;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-        transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
+        transition: all cubic-bezier(0.3,1.5,0.7,1) 0.3s;
+        width: 28px;
+        z-index: 2;
     }
 
     &:checked {
-        background-color: #4CD964;
-
+        background-color: $color-checkbox-active;
         &:before {
-            left: 32px;
+            left: calc(100% - 30px);
         }
     }
 }
