--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,28 @@ body {
 #checkAnswers,
 #prev {
   display: none; }
+
+.popup {
+  display: none;
+  height: 100%;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 2; }
+  .popup__content {
+    background: #fff;
+    border-radius: 3px;
+    box-shadow: 0px 2px 6px black;
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-top: 100px;
+    max-width: 500px;
+    padding: 15px;
+    position: relative;
+    width: 100%; }
+    @media screen and (max-width: 1024px) {
+      .popup__content {
+        width: 90%; } }
+    .popup__content h3 {
+      text-align: center; }
