--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $color-grey-light-1: #d3d3d3;
 $color-grey-dark-1: #707070;
 $color-white: #fff;
 $color-main-background:#f6f8ff;
-
+$color-popup-transparent: rgba(0, 0, 0, 0.75);
 $color-checkbox-active: #4cd964;
 $color-primary: #23274a;
 $color-secondary: #6c6f8b;
